k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-fullstack
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: challenge-fullstack
  template:
    metadata:
      labels:
        app: challenge-fullstack
    spec:
      containers:
        - name: challenge-fullstack-container
          image: nginx:latest
          ports:
            - containerPort: 80
