k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-challenge-service
  namespace: production
spec:
  selector:
    app: fullstack-challenge
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
